--- a/index.html
+++ b/index.html
@@ -475,9 +475,6 @@
                 margin-bottom: 0px;
             }
 
-            .visual-panel {
-                display: none;
-            }
 
             .nav-sidebar {
                 flex-direction: row !important;
@@ -565,7 +562,7 @@
 
                     <a href="contact.html"
                         class="bg-ocean-accent text-ocean-dark px-6 py-3 mt-4 text-sm font-bold uppercase tracking-wider hover:bg-white transition shadow-lg inline-block w-full rounded">
-                        Get Quote
+                        Contact Us
                     </a>
                 </div>
             </div>
