--- a/index.html
+++ b/index.html
@@ -1192,8 +1192,8 @@
 
                     <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="0">
-                        <div class="relative h-48 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D?q=80&w=2070&auto=format&fit=crop"
+                        <div class="relative h-48 shrink-0 overflow-hidden">
+                            <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?q=80&w=800&auto=format&fit=crop"
                                 alt="Fishing Port"
                                 class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                             <div class="absolute inset-0 bg-gradient-to-t from-[#020b16] to-transparent opacity-80">
@@ -1215,8 +1215,8 @@
 
                     <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="150">
-                        <div class="relative h-48 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D?q=80&w=2070&auto=format&fit=crop"
+                        <div class="relative h-48 shrink-0 overflow-hidden">
+                            <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?q=80&w=800&auto=format&fit=crop"
                                 alt="Quality Control"
                                 class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                             <div class="absolute inset-0 bg-gradient-to-t from-[#020b16] to-transparent opacity-80">
@@ -1238,8 +1238,8 @@
 
                     <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="300">
-                        <div class="relative h-48 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?q=80&w=2070&auto=format&fit=crop"
+                        <div class="relative h-48 shrink-0 overflow-hidden">
+                            <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?q=80&w=800&auto=format&fit=crop"
                                 alt="Cold Chain Logistics"
                                 class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                             <div class="absolute inset-0 bg-gradient-to-t from-[#020b16] to-transparent opacity-80">
@@ -1261,8 +1261,8 @@
 
                     <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="450">
-                        <div class="relative h-48 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1565891741441-64926e441838?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D?q=80&w=1950&auto=format&fit=crop"
+                        <div class="relative h-48 shrink-0 overflow-hidden">
+                            <img src="https://images.unsplash.com/photo-1565891741441-64926e441838?q=80&w=800&auto=format&fit=crop"
                                 alt="Factory Delivery"
                                 class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                             <div class="absolute inset-0 bg-gradient-to-t from-[#020b16] to-transparent opacity-80">
@@ -2046,15 +2046,15 @@
             }
         });
     </script>
+
     <script>
-    window.addEventListener('load', function() {
-        setTimeout(function() {
-            AOS.refresh();
-        }, 1000); // สั่งคำนวณตำแหน่ง Animation ใหม่หลังจากโหลดเสร็จ 1 วินาที
-    });
-</script>
+        window.addEventListener('load', function () {
+            setTimeout(function () {
+                AOS.refresh();
+            }, 1000); // สั่งคำนวณตำแหน่ง Animation ใหม่หลังจากโหลดเสร็จ 1 วินาที
+        });
+    </script>
 
 </body>
-
 
 </html>
