--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
 
-                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
+                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-auto md:h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="0">
                         <div class="relative h-48 shrink-0 overflow-hidden">
                             <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?q=80&w=800&auto=format&fit=crop"
@@ -1203,7 +1203,7 @@
                                 <span class="text-white font-bold text-lg font-mono">01</span>
                             </div>
                         </div>
-                        <div class="p-6 flex-1 relative">
+                        <div class="p-6 flex-1 relative flex flex-col">
                             <h3 class="text-xl font-bold text-ocean-accent mb-3 uppercase tracking-wide">Strategic
                                 Sourcing</h3>
                             <p class="text-gray-300 text-sm leading-relaxed">
@@ -1213,7 +1213,7 @@
                         </div>
                     </div>
 
-                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
+                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-auto md:h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="150">
                         <div class="relative h-48 shrink-0 overflow-hidden">
                             <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?q=80&w=800&auto=format&fit=crop"
@@ -1226,7 +1226,7 @@
                                 <span class="text-white font-bold text-lg font-mono">02</span>
                             </div>
                         </div>
-                        <div class="p-6 flex-1 relative">
+                        <div class="p-6 flex-1 relative flex flex-col">
                             <h3 class="text-xl font-bold text-ocean-accent mb-3 uppercase tracking-wide">Quality
                                 Inspection</h3>
                             <p class="text-gray-300 text-sm leading-relaxed">
@@ -1236,7 +1236,7 @@
                         </div>
                     </div>
 
-                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
+                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-auto md:h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="300">
                         <div class="relative h-48 shrink-0 overflow-hidden">
                             <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?q=80&w=800&auto=format&fit=crop"
@@ -1249,7 +1249,7 @@
                                 <span class="text-white font-bold text-lg font-mono">03</span>
                             </div>
                         </div>
-                        <div class="p-6 flex-1 relative">
+                        <div class="p-6 flex-1 relative flex flex-col">
                             <h3 class="text-xl font-bold text-ocean-accent mb-3 uppercase tracking-wide">Cold Chain
                                 Logistics</h3>
                             <p class="text-gray-300 text-sm leading-relaxed">
@@ -1259,7 +1259,7 @@
                         </div>
                     </div>
 
-                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
+                    <div class="process-card !p-0 overflow-hidden group flex flex-col h-auto md:h-full bg-white/5 border border-white/10 backdrop-blur-sm rounded-2xl hover:border-ocean-accent/50 transition-all duration-300 hover:shadow-[0_0_30px_rgba(212,175,55,0.15)]"
                         data-aos="fade-up" data-aos-delay="450">
                         <div class="relative h-48 shrink-0 overflow-hidden">
                             <img src="https://images.unsplash.com/photo-1565891741441-64926e441838?q=80&w=800&auto=format&fit=crop"
@@ -1272,7 +1272,7 @@
                                 <span class="text-white font-bold text-lg font-mono">04</span>
                             </div>
                         </div>
-                        <div class="p-6 flex-1 relative">
+                        <div class="p-6 flex-1 relative flex flex-col">
                             <h3 class="text-xl font-bold text-ocean-accent mb-3 uppercase tracking-wide">Factory
                                 Delivery</h3>
                             <p class="text-gray-300 text-sm leading-relaxed">
